# EasyUI

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  Makefile  README.md  easyui.pc
.github/workflows/: cmake-multi-platform.yml
cmake/: EasyUIConfig.cmake  EasyUIConfig.cmake.in
docs/: building_libraries.md  cleanup_scripts.md
docs/api/: README.md
docs/api/drawing/: README.md  line.md
docs/api/types/: README.md  point.md
docs/api/window/: README.md  create_window.md
docs/linking/: README.md  cmake.md  direct.md  pkg-config.md  visual-studio.md
examples/: CMakeLists.txt  calculator.c  example.c  shapes.c
include/: easyui.h  easyui_platform.h.in
scripts/: build_and_install.sh  build_libs.bat  build_mingw.bat  build_windows_libs.bat  cleanup.bat  cleanup.sh  install_dependencies.sh  install_windows.bat
src/: easyui.c
src/core/: types.h
src/graphics/: graphics.c  graphics.h
src/platform/linux/: graphics.c  window.c
src/platform/macos/: graphics.m  window.c  window.m
src/platform/windows/: graphics.c  window.c
src/styles/: styles.c  styles.h
src/window/: window.c  window.h
tests/: CMakeLists.txt  main.c  test_window.c
tests/include/: easyui_platform.h
